--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<div class="row p30">
+			<div class="col-md-6">
+					<div class="quote quote-primary">
+						<img src="images/collab.jpeg">	
+						</a>
+					</div>
+					<div class="my-details">
+						<ul class="my-meta">
+							<li>By: <a href="">Paul Tuleto</a></li>
+							<li>May 22, 2020</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 		
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
